deployment/kubernetes/overlays/general/production/enroll/enroll-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enroll
spec:
  template:
    spec:
      containers:
        - name: enroll
